# cpp-minimal-rest-api

./: .gitignore  .gitignore.swp  CMakeLists.txt  README.md
include/: BaseServiceServer.hpp  PostsService.hpp  cxxopts.hpp
src/: BaseServiceServer.cpp  CMakeLists.txt  PostsService.cpp  main.cpp
test/: CMakeLists.txt  rest_api_test.cpp
